// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link ACT theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-14f5v1x-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;

exports[`Link ACT_ET theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1mvlmp5-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;

exports[`Link ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-grzwhc-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;

exports[`Link ENCOURAGE_E4S theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1rjygfk-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;
